merges, fix overlap css elements, add menu & export button

--- a/react-app/src/pages/Header.css
+++ b/react-app/src/pages/Header.css
@@ -2,6 +2,7 @@
     color: white;
     white-space: nowrap;
     margin-right: 10px;
+    /* background-color: white; */
 }
 
 .headerText:hover {
@@ -11,7 +12,7 @@
 
 #header {
     width: 100%;
-    height: 6vh;
+    height: 10vh;
     position: absolute;
     top: 0;
     padding-left: 10px;
@@ -25,10 +26,12 @@
     justify-content: space-between;
     align-items: center;
     z-index: 999;
+
+    border-bottom-style: solid;
 }
 
 .pfp {
-    margin-top: 10px;
+    margin-top: 0px;
     margin-left: 0;
     margin-right: 5px;
     height: 8vh;
@@ -38,7 +41,7 @@
 
 .profile-dropdown-menu {
     position: absolute;
-    top: 8vh;
+    top: 10vh;
     right: 0;
     background-color: black;
     width: 12vw;
@@ -63,4 +66,41 @@
     width: 12vw;
     height: 7vh;
     font-size: 1.5vw;
+}
+
+#homeButton,
+#historyButton {
+    height: 9vh;
+    width: 8vw;
+
+    background-color: #1a1a1a;
+    /* border-style: solid; */
+    border-left-style: solid;
+    border-right-style: solid;
+    border-width: 3px;
+    border-color: rgb(16, 16, 16);
+    text-align: center;
+    
+    display: flex;
+    align-items: center;  
+    justify-content: center; 
+
+    cursor: pointer;
+}
+
+#homeButton:hover,
+#historyButton:hover {
+    background-color: #2b2b2b;
+}
+
+#homeButton {
+    position: relative;
+    bottom: 0.5vh;
+    right: 23vw;
+}
+
+#historyButton {
+    position: absolute;
+    bottom: 0.5vh;
+    left: 48vw;
 }
